# NPNK

./: .gitignore  .gitmodules  files  generator.py  handleFunctions.py  manager.py  nkpp.c  nkpp.h  nuklear_pp.h  preprocess.sh  project.targets  pyproject.toml
backend/: CMakeLists.txt  NPWayland.cpp  NPWindows.cpp  UnixBuild.cmake  WinBuild.cmake  main.c  npnk-backend.cpp  npnk-backend.cpp.gl2  npnk-backend.cpp.gl3
bindings/: CMakeLists.txt  np_nuklear.cpp
libnuklear/: CMakeLists.txt  UnixBuild.cmake  WinBuild.cmake  nuklear.c
npcore_nuklear/: CMakeLists.txt  NPNK.cpp  UnixBuild.cmake  WinBuild.cmake  np_nuklear.cpp
obuild/: npnuklear.pyi
src/NPNK/: NPWayland.pyi  Nuklear.pyi
tools/: WIN32TC.cmake  generator.py  handleFunctions.py  install.sh  nkpp.c  nkpp.h  preprocess.sh
